update readme; start coding

--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name" : "grunt-vows-runner",
   "version" : "0.1.0",
-  "description" : "An alternative to the vows command-line test-runner using grunt. Adds the ability to run test suites in parallel.",
-  "keywords" : ["vows", "test", "testing", "runner", "task", "gruntplugin", "grunt", "bdd", "concurrent", "asynchronous", "parallel"],
+  "description" :
+    "An alternative to the vows command-line test-runner using grunt. Adds the ability to run test suites in parallel.",
+  "keywords" :
+    ["vows", "test", "testing", "runner", "task", "gruntplugin", "grunt", "bdd", "concurrent", "asynchronous", "parallel"],
   "author" : {
     "name" : "Adam Stallard",
     "email" : "adam@goalzen.org",
@@ -12,7 +14,11 @@
     "test" : "test"
   },
   "dependencies" : {
-    "vows" : "*"
+    "vows" : "*",
+    "grunt" : "~0.3"
+  },
+  "devDependencies" : {
+    "grunt" : "*"
   },
   "license" : {
     "type" : "MIT",
