--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies" : {
     "vows" : "*",
-    "grunt" : "~0.4"
+    "grunt" : "~0.4",
+    "async" : "*",
+    "underscore" : "*"
   },
   "license" : {
     "type" : "MIT",
