--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
   },
   "dependencies" : {
     "vows" : "*",
-    "grunt" : "~0.4"
+    "grunt" : "~0.4",
+    "async" : "*",
+    "underscore" : "*"
   },
   "license" : {
     "type" : "MIT",
     "url" : "https://github.com/goalzen/grunt-vows-runner/blob/master/LICENSE-MIT"
   },
   "engines" : {
-    "node" : "*"
+    "node" : ">=0.8.0"
   },
   "scripts" : {
     "test" : "grunt"
