--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name" : "grunt-vows-runner",
-  "version" : "0.1.2",
+  "version" : "0.1.3",
   "description" :
     "An alternative test-runner for vows using grunt.  Adds new capabilities such as running test suites concurrently.",
   "keywords" :
@@ -16,7 +16,8 @@
   "dependencies" : {
     "vows" : "*",
     "grunt" : "~0.4",
-    "underscore" : "*"
+    "underscore" : "*",
+    "vows-reporters" : "*"
   },
   "license" : {
     "type" : "MIT",
