--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name" : "grunt-vows-runner",
-  "version" : "0.2.1",
+  "version" : "0.3.0",
   "description" :
     "An alternative test-runner for vows using grunt.  Adds new capabilities such as running test suites concurrently.",
   "keywords" :
@@ -17,7 +17,7 @@
     "vows" : "*",
     "grunt" : "~0.4",
     "underscore" : "*",
-    "vows-reporters" : "*"
+    "vows-reporters" : ">=0.7.0"
   },
   "license" : {
     "type" : "MIT",
